# susumeru

./: .gitignore  README.md  database.py  docker-compose.yaml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: API_HTMLdocument.py  Dockerfile  database.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 22564093b860_rename_date_record_date.py  3e17918af4b2_add_salt_to_user.py  e27d91a9ec51_init_tables.py
backend/api/: database.py  main.py  models.py
backend/api/cruds/: auth.py  books.py  progresses.py  target_settings.py  user.py  users.py
backend/api/routers/: auth.py  books.py  progresses.py  target_settings.py  user.py  users.py
backend/api/schemas/: auth.py  books.py  progresses.py  target_settings.py  user.py
backend/routers/: auth.py
frontend/: Dockerfile  docker-compose.yaml
frontend/react-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/react-app/src/: App.jsx  index.css  main.jsx
frontend/react-app/src/components/: BookInfo.jsx  BookItem.jsx  BookTitle.jsx  Header.jsx  ProgressCircle.jsx  ProgressPercent.jsx  UserInfo.jsx
frontend/react-app/src/modals/: CreateBook.jsx  UpdateTargetPages.jsx  UpdateUserName.jsx  UpdateUsername.jsx
frontend/react-app/src/pages/: Base.jsx  Book.jsx  BooksList.jsx  Login.jsx  Signin.jsx  Signup.jsx  User.jsx
frontend/react-app/src/repositories/: ProtectedRoute.jsx  Requests.jsx  SessionProvider.jsx  utils.jsx
